hphp/hack/test/typecheck/array_sub2.php.exp
File "array_sub2.php", line 12, characters 23-38:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 29, characters 49-50:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 29, characters 55-62:
  This type constraint is violated
  File "hackarray.hhi", line 29, characters 55-62:
  Expected `arraykey`
  File "array_sub2.php", line 12, characters 30-33:
  But got `bool`
File "array_sub2.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
  File "array_sub2.php", line 12, characters 23-38:
  Expected `dict<bool, _>`
  File "array_sub2.php", line 20, characters 15-25:
  But got `vec<int>`
